[project]
name = "fastapi-online-cinema"
version = "0.1.0"
description = ""
authors = [
    {name = "AntonKrinichnyi",email = "a.krinichnyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "stripe (>=12.1.0,<13.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
